--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -38,7 +38,7 @@ a.icon-link:link, a.icon-link:active, a.icon-link:visited {
 }
 
 a > .top5:hover {
-    background-color: #ae3910;
+    background-color: #A14F36;
 }
 
 .progress-bar-label {
@@ -50,19 +50,19 @@ a > .top5:hover {
 div.left-sidebar {
     height:100%;
     /* IE10+ */
-    background-image: -ms-radial-gradient(left top, ellipse farthest-corner, #DD4814 0%, #F59331 100%);
+    background-image: -ms-radial-gradient(left top, ellipse farthest-corner, #D2573F 0%, #F59331 100%);
     /* Mozilla Firefox */
-    background-image: -moz-radial-gradient(left top, ellipse farthest-corner, #DD4814 0%, #F59331 100%);
+    background-image: -moz-radial-gradient(left top, ellipse farthest-corner, #D2573F 0%, #F59331 100%);
     /* Opera */
-    background-image: -o-radial-gradient(left top, ellipse farthest-corner, #DD4814 0%, #F59331 100%);
+    background-image: -o-radial-gradient(left top, ellipse farthest-corner, #D2573F 0%, #F59331 100%);
     /* Webkit (Safari/Chrome 10) */
-    background-image: -webkit-gradient(radial, left top, 0, left top, 572, color-stop(0, #DD4814), color-stop(100, #F59331));
+    background-image: -webkit-gradient(radial, left top, 0, left top, 572, color-stop(0, #D2573F), color-stop(100, #F59331));
     /* Webkit (Chrome 11+) */
-    background-image: -webkit-radial-gradient(left top, ellipse farthest-corner, #DD4814 0%, #F59331 100%);
+    background-image: -webkit-radial-gradient(left top, ellipse farthest-corner, #D2573F 0%, #F59331 100%);
     /* W3C Markup */
-    background-image: radial-gradient(ellipse farthest-corner at left top, #DD4814 0%, #F59331 100%);
+    background-image: radial-gradient(ellipse farthest-corner at left top, #D2573F 0%, #F59331 100%);
     color: #ffffff;
-    background: linear-gradient(23deg, #e0a621, #eb2f09);
+    background:  #D2573F;
     background-size: 400% 400%;
     -webkit-animation: 24s ease infinite;
     -moz-animation: 24s ease infinite;
