--- a/public/css/horizontal-scroll.css
+++ b/public/css/horizontal-scroll.css
@@ -4,7 +4,7 @@
 	border-right:none; 
 	font-style: italic;
 	padding: 0 0 0 70px;
-	box-shadow: 0 2px 5px -3px #000;
+	box-shadow: 0 2px 5px -3px #3E3D3C;
 	position: relative;
 	top: -21px;
 }
