--- a/src/components/LeftSidebar/LeftSidebar.css
+++ b/src/components/LeftSidebar/LeftSidebar.css
@@ -16,7 +16,7 @@ i.icons {
     width: 1.6em;
     text-align: center;
     line-height: 1.6em;
-    background: #222222;
+    background: #3E3D3C;
     color: #fff;
     border-radius: 0.8em;
     position: relative;
@@ -122,7 +122,7 @@ min-height: 100%;
 
 
 h5{
-    color: #222222;
+    color: #3E3D3C;
     font-weight: bold;
 }
 
